--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ars-frontend",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "private": true,
   "homepage": "https://yanchen184.github.io/ars-frontend/",
   "dependencies": {
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
